// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-video renders 1`] = `
<ecl-video autoplay="" loop="" muted="" poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" sr-video-player="Video" video-title="Big Buck Bunny">
  <!---->
  <video aria-label="Big Buck Bunny Video" autoplay="" class="ecl-video" controls="" loop="" muted="" playsinline="" poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
    <source src="https://vod.prd.commavservices.eu/12/224712/LR_I224712EN1W.mp4" type="video/mp4">
  </video>
</ecl-video>
`;

exports[`ecl-video renders correctly with zoom 1`] = `
<ecl-video autoplay="" poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg" sr-video-player="Video" video-title="Big Buck Bunny" zoom="">
  <!---->
  <video aria-label="Big Buck Bunny Video" autoplay="" class="ecl-video ecl-video--zoom" controls="" playsinline="" poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg">
    <source src="https://vod.prd.commavservices.eu/12/224712/LR_I224712EN1W.mp4" type="video/mp4">
  </video>
</ecl-video>
`;
